Made multiple changes

--- a/index.html
+++ b/index.html
@@ -60,7 +60,6 @@
               "Con el sabor boricua <br />
               de nuestras abuelas&#174"
             </h2>
-            <h3> Pollo </h3>
             <a href="#menu" class="button">Caldos Disponibles</a>
           </div>
 
@@ -434,7 +433,7 @@
                 </clipPath>
               </defs>
             </svg>
-            <h3 class="services__title">Delivery</h3>
+            <h3 class="services__title">Entrega</h3>
             <p class="services__description">
               We offer our clients excellent quality services for many years,
               with the best and delicious food in the city.
@@ -445,24 +444,14 @@
 
       <!--========== MENU ==========-->
       <section class="menu section bd-container" id="menu">
-        <span class="section-subtitle">Special</span>
-        <h2 class="section-title">Menu of the week</h2>
+        <span class="section-subtitle">Especialidad</span>
+        <h2 class="section-title">Nuestros caldos</h2>
 
         <div class="menu__container bd-grid">
           <div class="menu__content">
-            <img src="assets/img/plate1.png" alt="" class="menu__img" />
-            <h3 class="menu__name">Barbecue salad</h3>
-            <span class="menu__detail">Delicious dish</span>
-            <span class="menu__preci">$22.00</span>
-            <a href="#" class="button menu__button"
-              ><i class="bx bx-cart-alt"></i
-            ></a>
-          </div>
-
-          <div class="menu__content">
-            <img src="assets/img/plate2.png" alt="" class="menu__img" />
-            <h3 class="menu__name">Salad with fish</h3>
-            <span class="menu__detail">Delicious dish</span>
+            <img src="assets/img/chicken-svgrepo-com.svg" alt="" class="menu__img" />
+            <h3 class="menu__name">Caldo de pollo</h3>
+            <span class="menu__detail">Grass fed</span>
             <span class="menu__preci">$12.00</span>
             <a href="#" class="button menu__button"
               ><i class="bx bx-cart-alt"></i
@@ -470,17 +459,50 @@
           </div>
 
           <div class="menu__content">
-            <img src="assets/img/plate3.png" alt="" class="menu__img" />
-            <h3 class="menu__name">Spinach salad</h3>
-            <span class="menu__detail">Delicious dish</span>
-            <span class="menu__preci">$9.50</span>
+            <img src="assets/img/pig-svgrepo-com.svg" alt="" class="menu__img" />
+            <h3 class="menu__name">Caldo de cerdo</h3>
+            <span class="menu__detail">Exelente sabor</span>
+            <span class="menu__preci">$12.00</span>
+            <a href="#" class="button menu__button"
+              ><i class="bx bx-cart-alt"></i
+            ></a>
+          </div>
+
+          <div class="menu__content">
+            <img src="assets/img/cow-svgrepo-com.svg" alt="" class="menu__img" />
+            <h3 class="menu__name">Caldo de res</h3>
+            <span class="menu__detail">Grass fed</span>
+            <span class="menu__preci">$15.00</span>
             <a href="#" class="button menu__button"
               ><i class="bx bx-cart-alt"></i
             ></a>
           </div>
         </div>
       </section>
+      <div class="menu__container bd-grid">
+        <div class="menu__content">
+          <img src="assets/img/fish-svgrepo-com (1).svg" alt="" class="menu__img" />
+          <h3 class="menu__name">Caldo de pollo</h3>
+          <span class="menu__detail">Grass fed</span>
+          <span class="menu__preci">$12.00</span>
+          <a href="#" class="button menu__button"
+            ><i class="bx bx-cart-alt"></i
+          ></a>
+        </div>
 
+        <div class="menu__content">
+          <img src="assets/img/sheep-domesticated-animal-lamb-wool-sheep-svgrepo-com.svg" alt="" class="menu__img" />
+          <h3 class="menu__name">Caldo de cerdo</h3>
+          <span class="menu__detail">Exelente sabor</span>
+          <span class="menu__preci">$12.00</span>
+          <a href="#" class="button menu__button"
+            ><i class="bx bx-cart-alt"></i
+          ></a>
+        </div>
+
+
+      </div>
+    </section>
       <!--===== APP =======-->
       <section class="app section bd-container">
         <div class="app__container bd-grid">
