New logo - reset page

--- a/index.html
+++ b/index.html
@@ -3,212 +3,18 @@
   <head>
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-
-    <!--========== BOX ICONS ==========-->
-    <link href='https://unpkg.com/boxicons@2.1.1/css/boxicons.min.css' rel='stylesheet'>
-
-    <!--========== CSS ==========-->
+    <link href="https://unpkg.com/boxicons@2.1.1/css/boxicons.min.css" rel="stylesheet" />
     <link rel="stylesheet" href="assets/css/styles.css" />
-
     <title>Caldos PR</title>
+    <link rel="shortcut icon" type="image/jpg" href="./assets/img/favicon.ico" />
   </head>
   <body>
-    <!--========== SCROLL TOP ==========-->
-    <a href="#" class="scrolltop" id="scroll-top">
-      <i class="bx bx-chevron-up scrolltop__icon"></i>
-    </a>
-    <!--========== HEADER ==========-->
-    <header class="l-header" id="header">
-      <nav class="nav bd-container">
-        <a href="#" class="nav__logo">Caldos Puerto Rico</a>
+    <h1>CALDOS PR</h1>
+    <h3>"Como el de nuestras abuelas."</h3>
+    <div class="logo" id="logo">
+      <img src="/assets/img/" alt="Logo de la compania" />
+    </div>
 
-        <div class="nav__menu" id="nav-menu">
-          <ul class="nav__list">
-            <li class="nav__item">
-              <a href="#home" class="nav__link active-link">Hogar</a>
-            </li>
-            <li class="nav__item">
-              <a href="#about" class="nav__link">Nosotros</a>
-            </li>
-
-            <li class="nav__item">
-              <a href="#menu" class="nav__link">Caldos</a>
-            </li>
-            <li class="nav__item">
-              <a href="#contact" class="nav__link">Con&#233ctate</a>
-            </li>
-
-            <li><i class="bx bx-moon change-theme" id="theme-button"></i></li>
-          </ul>
-        </div>
-
-        <div class="nav__toggle" id="nav-toggle">
-          <i class="bx bx-menu"></i>
-        </div>
-      </nav>
-    </header>
-
-    <main class="l-main">
-      <!--========== HOME ==========-->
-      <section class="home" id="home">
-        <div class="home__container bd-container bd-grid">
-          <div class="home__data">
-            <h1 class="home__title">Caldos PR</h1>
-            <h2 class="home__subtitle">
-              "Con el sabor boricua <br />
-              de nuestras abuelas"
-            </h2>
-            <a href="#menu" class="button">Caldos Disponibles</a>
-          </div>
-
-          <img src="assets/img/home.jpg" alt="Botella de caldo" class="home__img" />
-        </div>
-      </section>
-
-      <!--========== ABOUT ==========-->
-      <section class="about section bd-container" id="about">
-        <div class="about__container bd-grid">
-          <div class="about__data">
-            <span class="section-subtitle about__initial">Nosotros</span>
-            <h2 class="section-title about__initial">
-              Los mejores caldos <br />
-              en toda la isla
-            </h2>
-            <p class="about__description">
-                Confeccionamos el revolucionario Caldo de Hueso con el sabor boricua de nuestras abuelas. Además de sabor, aporta colágeno, aminoácidos, electrolitos y sodio que da energía a tu vida, ayuda a tu salud y mantiene tu organismo en función. Puede ser utilizado para cocinar, alimentación cetogenica, dietas liquidas pre- post operatorias, bariatricas, cirugias, pacientes encamados o bajo tratamientos de cancer.
-            </p>
-           </div>
-
-          <img src="assets/img/about.jpg" alt="Muchos caldos" class="about__img" />
-        </div>
-      </section>
-      <!--========== MENU ==========-->
-      <section class="menu section bd-container" id="menu">
-        <span class="section-subtitle">Especialidad</span>
-        <h2 class="section-title">Nuestros caldos</h2>
-
-        <div class="menu__container bd-grid">
-          <div class="menu__content">
-            <img src="assets/img/chicken.svg" alt="" class="menu__img" />
-            <h3 class="menu__name">Caldo de pollo</h3>
-            <span class="menu__detail">Grass fed</span>
-            <span class="menu__preci">$12.00</span>
-            <a href="#" class="button menu__button"
-              ><i class="bx bx-cart-alt"></i
-            ></a>
-          </div>
-
-          <div class="menu__content">
-            <img src="assets/img/pig.svg" alt="" class="menu__img" />
-            <h3 class="menu__name">Caldo de cerdo</h3>
-            <span class="menu__detail">Exelente sabor</span>
-            <span class="menu__preci">$12.00</span>
-            <a href="#" class="button menu__button"
-              ><i class="bx bx-cart-alt"></i
-            ></a>
-          </div>
-
-          <div class="menu__content">
-            <img src="assets/img/cow.svg" alt="" class="menu__img" />
-            <h3 class="menu__name">Caldo de res</h3>
-            <span class="menu__detail">Grass fed</span>
-            <span class="menu__preci">$15.00</span>
-            <a href="#" class="button menu__button"
-              ><i class="bx bx-cart-alt"></i
-            ></a>
-          </div>
-        </div>
-      </section>
-      <div class="menu__container bd-grid">
-        <div class="menu__content">
-          <img src="assets/img/fish.svg" alt="" class="menu__img" />
-          <h3 class="menu__name">Caldo de pescado</h3>
-          <span class="menu__detail">Wild caught</span>
-          <span class="menu__preci">$12.00</span>
-          <a href="#" class="button menu__button"
-            ><i class="bx bx-cart-alt"></i
-          ></a>
-        </div>
-
-        <div class="menu__content">
-          <img src="assets/img/sheep.svg" alt="" class="menu__img" />
-          <h3 class="menu__name">Caldo de cordero</h3>
-          <span class="menu__detail">Altos niveles de selenio</span>
-          <span class="menu__preci">$12.00</span>
-          <a href="#" class="button menu__button"
-            ><i class="bx bx-cart-alt"></i
-          ></a>
-        </div>
-
-
-      </div>
-    </section>
-      <!--
-      <section class="app section bd-container">
-        <div class="app__container bd-grid">
-          <div class="app__data">
-            <span class="section-subtitle app__initial">App</span>
-            <h2 class="section-title app__initial">App </h2>
-            <p class="app__description">
-              Later
-            </p>
-            <div class="app__stores">
-              <a href="#"
-                ><img src="assets/img/app1.png" alt="" class="app__store"
-              /></a>
-              <a href="#"
-                ><img src="assets/img/app2.png" alt="" class="app__store"
-              /></a>
-            </div>
-          </div>
-
-          <img src="assets/img/movil-app.png" alt="" class="app__img" />
-        </div>
-      </section> -->
-      <!--========== CONTACT US ==========-->
-      <section class="contact section bd-container" id="contact">
-        <div class="contact__container bd-grid">
-          <div class="contact__data">
-             <h2 class="section-title contact__initial">Con&#233ctate</h2>
-            <p class="contact__description">
-              Llamer para ordenar! Informacion sobre los dias y las rutas de entrga seran actualizadas en nuestra paginas de Facebook y Instagram.
-            </p>
-          </div>
-        </div>
-      </section>
-    </main>
-
-    <!--========== FOOTER ==========-->
-    <footer class="footer section bd-container">
-      <div class="footer__container bd-grid">
-        <div class="footer__content">
-          <a href="#" class="footer__logo">Caldos PR</a>
-          <div>
-            <a href="https://www.facebook.com/caldospr" class="footer__social"
-              ><i class="bx bxl-facebook"></i
-            ></a>
-            <a href="#" class="footer__social"
-              ><i class="bx bxl-instagram"></i
-            ></a>
-            <a href="https://wa.me/7879009663" class="footer__social"
-              ><i class="bx bxl-whatsapp"></i
-            ></a>
-          </div>
-        </div>
-        <div class="footer__content">
-          <h3 class="footer__title">Contactenos</h3>
-           <a href="https://wa.me/7879009663">(787) 900-9663</a><br/>
-           <a href="mailto:elena@caldos.com">elena@caldospr.com </a>
-         </div>
-      </div>
-
-      <p class="footer__copy">&#169; 2022 Caldos PR. Todos los derechos reservados</p>
-    </footer>
-
-    <!--========== SCROLL REVEAL ==========-->
-    <script src="https://unpkg.com/scrollreveal"></script>
-
-    <!--========== MAIN JS ==========-->
     <script src="assets/js/main.js"></script>
   </body>
 </html>
