--- a/index.html
+++ b/index.html
@@ -12,7 +12,7 @@
     <h1>CALDOS PR</h1>
     <h3>"Como el de nuestras abuelas."</h3>
     <div class="logo" id="logo">
-      <img src="/assets/img/" alt="Logo de la compania" />
+      <img src="/assets/img/Logo.png" class="logo" alt="Logo de la compania" />
     </div>
 
     <script src="assets/js/main.js"></script>
