--- a/index.html
+++ b/index.html
@@ -3,16 +3,19 @@
   <head>
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <link href="https://unpkg.com/boxicons@2.1.1/css/boxicons.min.css" rel="stylesheet" />
     <link rel="stylesheet" href="assets/css/styles.css" />
     <title>Caldos PR</title>
     <link rel="shortcut icon" type="image/jpg" href="./assets/img/favicon.ico" />
   </head>
   <body>
-    <h1>CALDOS PR</h1>
-    <h3>"Como el de nuestras abuelas."</h3>
-    <div class="logo" id="logo">
-      <img src="/assets/img/Logo.png" class="logo" alt="Logo de la compania" />
+    <div class="header">
+      <div class="header-right">
+        <a href="#default"
+          ><img src="/assets/img/Logo.webp" class="caldosLogo" alt="Logo de la compania"
+        /></a>
+        <h1>CALDOS PR</h1>
+        <h2>"Como el de nuestras abuelas."</h2>
+      </div>
     </div>
 
     <script src="assets/js/main.js"></script>
